--- a/share/jupyterhub/static/less/page.less
+++ b/share/jupyterhub/static/less/page.less
@@ -282,7 +282,7 @@
 
 .new-button {
   padding: 2px 8px;
-  background-color: #1EAEA5;
+  background-color: #4578f0;
   color: #FFFFFF;
   border-radius: 2px;
   border: none;
