--- a/share/jupyterhub/templates/error.html
+++ b/share/jupyterhub/templates/error.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="col-sm-2 empty-left-bar">
+    <div class="col-sm-2 grid-left">
     </div>
     <div class="col-sm-10 grid-right">
       <div class="grid-top">
