--- a/share/jupyterhub/templates/spawn_pending.html
+++ b/share/jupyterhub/templates/spawn_pending.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% block main %}
-    <div class="col-sm-2 empty-left-bar">
+    <div class="col-sm-2 grid-left">
     </div>
     <div class="col-sm-10 grid-right-spawn">
       <div class="grid-top">
