--- a/share/jupyterhub/templates/extensions.html
+++ b/share/jupyterhub/templates/extensions.html
@@ -4,14 +4,9 @@
 {% endif %}
 
 {% block main %}
-<div class="container-fluid" style="background-color: #1B233A">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-2">
-        <div class="row">
-            <div class="col-sm-12 grid-item">
-                <i class="fa fa-home home-icon"></i>&nbsp;&nbsp;Dashboard
-            </div>
-        </div>
+    <div class="col-sm-2 grid-left">
     </div>
     <div class="col-sm-10 grid-right">
       <div class="grid-top">
