--- a/share/jupyterhub/templates/not_running.html
+++ b/share/jupyterhub/templates/not_running.html
@@ -3,7 +3,7 @@
 {% block main %}
 
 <div>
-    <div class="col-sm-2 empty-left-bar">
+    <div class="col-sm-2 grid-left">
     </div>
     <div class="col-sm-10 grid-right-spawn">
       <div class="grid-top">
